RandomIMG generator first commit

--- a/ImageRandomizer/RandomFiles.html
+++ b/ImageRandomizer/RandomFiles.html
@@ -8,18 +8,10 @@
 </head>
 <body>  
     <h1>Create a random Image</h1>
+    <p>Click the button below to generate a random image.</p>
+    <button id="generate">Generate</button>
+    <br><br>
+    <img id="randomImage" src="" style="max-width: 300px; max-height: 300px;" /><br>
+    <script src="RandomFiles.js"></script>
 </body>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-        }
-        img {
-            max-width: 100%;
-            max-height: 100%;
-        }
-    </style>
 </html>
